- Please report any issue!

-----------------------------------------------------------------------
 VERSION 0.5.x
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.5.x

Changes:
- Data Storage: now thread safe
- set_value:    now thread safe
- get_value:    now thread safe

Fixes:
- tab bar: fixed tab bar callback
- drawing: fixed "originy" issue #309
- table: fixed "originy" issue #297

-----------------------------------------------------------------------
 VERSION 0.5.62
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.5.62

Breaking Changes:
- close_popup: Now requires the name of the popup to be added.

Fixes:
- primary window: Fixed issue in which primary window messed up other window
                  settings and flags

-----------------------------------------------------------------------
 VERSION 0.5.53
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.5.53

Updates:
- ImGui:           	Upgraded to v1.79
- ImGuiFileDialog: 	Upgraded to v0.5.1
- Python:           Added python 3.9 support

Fixes:
- start_dearpygui:     	Is now protected from trying to create a new dearpygui instance before closing the last one issue #289
- workspace switching:  Fixed workspace switching causing crashes #256
- show_metrics:         Fixed show_metrics warning/exception #293

-----------------------------------------------------------------------
 VERSION 0.5.0 (10/20/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.5.0

Breaking Changes:
- show_source: "show_source" removed to prepare for text editor widget in 0.6

Updates: