@@ -82,6 +82,10 @@ namespace Marvel {
 			{mvPythonDataType::Bool, "closable", "creates a button on the tab that can hide the tab", "False"},
 			{mvPythonDataType::String, "label", "", "''"},
 			{mvPythonDataType::Bool, "show", "Attempt to render", "True"},
+			{mvPythonDataType::Bool, "no_reorder", "Disable reordering this tab or having another tab cross over this tab", "False"},
+			{mvPythonDataType::Bool, "leading", "Enforce the tab position to the left of the tab bar (after the tab list popup button)", "False"},
+			{mvPythonDataType::Bool, "trailing", "Enforce the tab position to the right of the tab bar (before the scrolling buttons)", "False"},
+			{mvPythonDataType::Bool, "no_tooltip", "Disable tooltip for the given tab", "False"},
 			{mvPythonDataType::String, "tip", "Adds a simple tooltip", "''"},
 			{mvPythonDataType::String, "parent", "Parent to add this item to. (runtime adding)", "''"},
 			{mvPythonDataType::String, "before", "This item will be displayed before the specified item in the parent. (runtime adding)", "''"},
@@ -484,12 +488,16 @@ namespace Marvel {
 		int closeable = false;
 		const char* label = "";
 		int show = true;
+		int no_reorder = false;
+		int leading = false;
+		int trailing = false;
+		int no_tooltip = false;
 		const char* tip = "";
 		const char* parent = "";
 		const char* before = "";
 
 		if (!(*mvApp::GetApp()->getParsers())["add_tab"].parse(args, kwargs, __FUNCTION__, &name, &closeable,
-			&label, &show, &tip, &parent, &before))
+			&label, &show, &no_reorder, &leading, &trailing, &no_tooltip, &tip, &parent, &before))
 			return ToPyBool(false);
 
 		if (std::string(parent).empty())
